# tree-sitter-symbols

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  DEVELOPMENT.md  Justfile  README.md  release-plz.toml
.just/: cargo.just  hooks.just  release.just
crates/tss/: CHANGELOG.md  Cargo.toml  README.md
crates/tss-rust/: CHANGELOG.md  Cargo.toml  README.md  build.rs  codegen.rs
crates/tss-rust/codegen/: feature_toml.rs  generator.rs  rust_docs.rs  schema.rs  utils.rs
crates/tss-rust/src/: lib.rs
crates/tss-rust/tests/: basic.rs
crates/tss/src/: lib.rs
crates/tss/tests/: basic.rs  basic_rust.rs  smoke_test.rs
