[dependencies]
tss-rust = { features = ["meta_full"], optional = true, workspace = true }

[package]
authors.workspace = true
categories = ["development-tools", "parser-implementations"]
description = "Generated node type enums and metadata from tree-sitter languages"
documentation = "https://docs.rs/tss/"
edition.workspace = true
homepage.workspace = true
keywords = ["ast", "codegen", "parser", "tree-sitter"]
license.workspace = true
name = "tss"
readme = "README.md"
repository.workspace = true
version = "0.2.2"

[lib]
name = "tree_sitter_symbols"
path = "src/lib.rs"

[features]
# Convenience features
default = []
lang-all = ["lang-rust"]
lang-all-full = ["lang-rust-full"]

# Language features
lang-rust = ["dep:tss-rust"]
lang-rust-full = ["lang-rust", "tss-rust/full"]

[lints.clippy]
all = "deny"
cargo = "deny"
pedantic = "deny"

[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"
